3.3.3

- support for storing/recovering the window positions

- added new instrument pictures for "Recorder", "Streamer" and "Listener"


3.3.2

- the connection setup dialog can now be opened during a connection

- support for three audio quality settings: low, normal and high


3.3.1

- enabled the OPUS codec

- store fader level settings

- improved server performance under Linux

- changed the network buffer for improved OPUS PLC performance
  
- added protocol overhead for DSL line for upload rate calculation

- fixed outstanding renaming from llcon to Jamulus

- bug fix: the overall delay was not correctly calculated


3.3.0

- renamed the software from llcon to Jamulus

- support for an instrument picture on the fader tag

- a server welcome message can be shown on a connect to the
  server (the message is shown in the chat dialog of the client)

- the source code is now compatible to Qt5

- bug fix: strings in the protocol are now utf-8 coded


3.2.2

- changed auto jitter buffer property to reduce audio drop outs

- bug fix: mechanism to keep port in NAT of slave server open works now correctly

- bug fix: slave server unregistering may not be successful


3.2.1

- support for audio device selection under Mac OS

- connect dialog list is sorted by the ping time

- software icon changed

- bug fix: fixed distorted audio with USB sound cards on Mac OS

- bug fix: fixed crash on slave server unregistering


3.2.0

- new GUI style of the main window, added switch for selecting the GUI style
  in the settings window

- a list of available servers is shown on pressing the connect button, the list
  is managed by a central server, any private server is added automatically if
  the registering setting is enabled

- the jitter buffer size can be independently set for client and server

- improved auto jitter buffer algorithm

- the Qt project file is now used for Linux, too

- ini-file is stored in the home directory instead of the application directory
